--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="redes">
         <a href="https://www.facebook.com/profile.php?id=100087542491990&locale=es_LA" target="_blank"><i
             class="fa-brands fa-facebook-f"></i></a>
-        <a href="https://x.com/live_remote69" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://x.com/Agredo_Daniell" target="_blank"><i class="fa-brands fa-twitter"></i></a>
         <a href="https://www.instagram.com/agredo_danniel/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://github.com/DaniAgredo" target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="https://www.youtube.com/@daniel_agredo" target="_blank"><i class="fa-brands fa-youtube">
